<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="266dp"
        android:layout_height="266dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="-17dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/blanco_gris"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/correo"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/correo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/contrasena"
        android:padding="20dp"
        android:password="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/verdefinance"
        android:text="@string/iniciar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/azulbtn"
        android:onClick="registrar"
        android:text="@string/registrarse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sucursalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginRegisterBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="Nuestra Sucursal" />

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialIcons"
        android:layout_centerHorizontal="true"
        android:text="@string/o_ingresa_con" />


    <LinearLayout
        android:id="@+id/socialIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb" />

    </LinearLayout>
</RelativeLayout>