<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivPost"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTop" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLike" />

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_thumb_up_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/like_number"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toStartOf="@id/ivDislike"
        app:layout_constraintStart_toEndOf="@+id/ivLike"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <ImageView
        android:id="@+id/ivDislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_thumb_down_24"
        app:layout_constraintStart_toEndOf="@+id/likeCount"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <TextView
        android:id="@+id/dislikeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/dislike_number"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toStartOf="@id/ivComment"
        app:layout_constraintStart_toEndOf="@+id/ivDislike"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <ImageView
        android:id="@+id/ivComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_chat_24"
        app:layout_constraintStart_toEndOf="@+id/dislikeCount"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <ImageView
        android:id="@+id/ivFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_handshake_24"
        app:layout_constraintStart_toEndOf="@+id/ivComment"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPost" />

    <TextView
        android:id="@+id/idUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/idPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>