<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="137dp"
        android:layout_height="116dp"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_horizontal" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="122dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:text="@string/nombreusuario"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnEditName"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnEditName"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="38dp"
        android:background="?android:attr/panelBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/doggo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPost" />

    <TextView
        android:id="@+id/tvPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="175dp"
        android:text="@string/posts"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDesc" />

    <TextView
        android:id="@+id/etDesc"
        android:layout_width="208dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="38dp"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:background="#200A0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgPerfil"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/cardview_shadow_end_color"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>